<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/title_web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/title_jitsi_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/jitsi_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/title_port_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/web_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />

</LinearLayout>