<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:onClick="onClickBluetooth"
        android:text="@string/button_bluetooth_disconnected"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_open_room"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:enabled="false"
        android:onClick="onClickOpenRoom"
        android:text="@string/button_open_room"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bluetooth" />

    <Button
        android:id="@+id/button_share_link"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:enabled="false"
        android:onClick="onClickShareLink"
        android:text="@string/button_share_link"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_room" />

    <Button
        android:id="@+id/button_switch_to_room"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:enabled="false"
        android:onClick="onClickSwitchToRoom"
        android:text="@string/button_switch_to_room"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_share_link" />

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/connection_status_false"
        android:textColor="#000000"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/list_paired_devices"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_forward"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/direct_command_forward"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/joystick" />

    <Button
        android:id="@+id/button_backward"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/direct_command_backward"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/joystick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/direct_command_turn_right"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/joystick"
        app:layout_constraintStart_toEndOf="@+id/button_forward"
        app:layout_constraintTop_toTopOf="@+id/joystick" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/direct_command_turn_left"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_backward"
        app:layout_constraintEnd_toStartOf="@+id/button_forward"
        app:layout_constraintTop_toTopOf="@+id/joystick" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystick"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:visibility="invisible"
        app:JV_autoReCenterButton="true"
        app:JV_backgroundColor="@color/joystick_background"
        app:JV_backgroundSizeRatio="50%"
        app:JV_borderColor="@color/joystick_border"
        app:JV_borderWidth="@dimen/_32sdp"
        app:JV_buttonColor="@color/joystick_button"
        app:JV_buttonSizeRatio="25%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_show_controller"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:onClick="onClickShowController"
        android:text="@string/button_controller_enable"
        android:textSize="@dimen/_10sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_switch_to_room" />

    <Button
        android:id="@+id/button_toggle_controller"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:onClick="onClickToggleController"
        android:text="@string/button_switch_to_joystick"
        android:textSize="@dimen/_10sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_show_controller" />

</androidx.constraintlayout.widget.ConstraintLayout>

